--- a/chapter4.tex
+++ b/chapter4.tex
@@ -37,7 +37,7 @@ Before using the ML regression algorithms introduced in this section to solve th
 Next to the adaptations that need to be made in order to fit regression algorithms to the interpolation problem, there are also non-functional requirements that need to be considered when selecting a model. The most important requirements are:
 
 \begin{itemize}
-    \item \textbf{Model Assumptions:} The model assumptions need to be met by the features used in the input data. For example, linear regression assumes that the input features are independent from each other, as linear regression measures the amount the target veariable is influenced by one feature changing while all other features stay the same. In case of correlation, this assumption is violated, as for example the amount of percipitation influences the humidity. Other assumptions could be the distribution of data, the mean of values not changes, etc.
+    \item \textbf{Model Assumptions:} The model assumptions need to be met by the features used in the input data. For example, linear regression assumes that the input features are independent from each other, as linear regression measures the amount the target veariable is influenced by one feature changing while all other features stay the same. In case of correlation, this assumption is violated, as for example the amount of precipitation influences the humidity. Other assumptions could be the distribution of data, the mean of values not changes, etc.
     \item \textbf{Accuracy and Reliability:} Creating an accurate and reliable model is really important to increase the trust for predicted values, however there are certain trade-offs to be made, as model performance or generalisation ability are also important factors to consider.
     The accuracy of the model is mainly determined how well the choosen model can fit the underlying data, e.g.\ a linear model cannot fit a non-linear function, and is measured by the evaluation metrics described in Section~\ref{sec:validation methodology}.
     The reliability of the model is determined by the training data as well as the model architecture, as f.e.\ training data that is not representative of the underlying function can introduce bias into the model or can prevent the model from learning the correct function. Another important factor is the data quality, as more noise can result in worse model performance. Lastly, reliability of the model is also determined by the ability of the model to handle missing or sparse data as well as outliers. This is especially important in our context as we try to integrate moving sensors into the interpolation process, which sense data at different times and locations.
