--- a/chapter5.tex
+++ b/chapter5.tex
@@ -47,7 +47,7 @@ Overall, there are around 11.738 active sensors~\footnote{as of 24.06.2023}. Of 
 \subsection{Netatmo}
 
 Netatmo~\footnote{\url{https://www.netatmo.com/en-eu}} is a French company that sells smart-home devices including outdoor weather stations, indoor sensors for air quality, as well as other products such as smart cameras. They host a weather map~\footnote{\url{https://weathermap.netatmo.com/}, \textit{last accessed: 06.08.2023}} where customers can share their outdoor weather station data. They provide an API to access current weather station data as well historic data from individual outddor sensors and modules.
-They provide their historical and current weather data for commercial partners or partners in the research and education sector. They are part of the EUMETNET project~\footnote{\url{https://www.eumetnet.eu/}, \textit{last accessed: 06.08.2023}} which is a network of 31 European meteological and hydrological services (NMHSs). The project aims to facilitate the exchange of weather data and to improve the quality of weather forecasts, especially in the context of PWS~\cite{hahn2022observations}. There are currently no openly historical datasets available from Netatmo data, only private datasets~\footnote{\url{https://catalogue.ceda.ac.uk/uuid/e8793d74a651426692faa100e3b2acd3}, \textit{last accessed: 06.08.2023}} that are only available for partners such as EUMETNET members. They offer an educational program~\footnote{\url{https://www.netatmo.com/en-eu/weather-with-netatmo}} to acess temporally and spatially limited amounts of data that is usually only available to commercial partners.
+They provide their historical and current weather data for commercial partners or partners in the research and education sector. They are part of the EUMETNET project~\footnote{\url{https://www.eumetnet.eu/}, \textit{last accessed: 06.08.2023}} which is a network of 31 European meteorological and hydrological services (NMHSs). The project aims to facilitate the exchange of weather data and to improve the quality of weather forecasts, especially in the context of PWS~\cite{hahn2022observations}. There are currently no openly historical datasets available from Netatmo data, only private datasets~\footnote{\url{https://catalogue.ceda.ac.uk/uuid/e8793d74a651426692faa100e3b2acd3}, \textit{last accessed: 06.08.2023}} that are only available for partners such as EUMETNET members. They offer an educational program~\footnote{\url{https://www.netatmo.com/en-eu/weather-with-netatmo}} to acess temporally and spatially limited amounts of data that is usually only available to commercial partners.
 
 % precisions
 % Please add the following required packages to your document preamble:
@@ -69,7 +69,7 @@ Rainfall       & mm/h    & 0.2 to 150 mm/h        & 1mm/h   & every 5 min (bucke
 % todo: adjust to page size, maybe move to dataset chapter
 \end{table}
 
-In the context of collecting meteological data, the smart weather products are of particular interest. These include a smart outdoor weather station that collects air temperature, humidity and air pressure, an anemometer that collects wind speed and direction, and a rain gauge. The sensor specifications, as reported by the vendor himself, is reported in Table~\ref{tab: netatmo sensor specs}.\\
+In the context of collecting meteorological data, the smart weather products are of particular interest. These include a smart outdoor weather station that collects air temperature, humidity and air pressure, an anemometer that collects wind speed and direction, and a rain gauge. The sensor specifications, as reported by the vendor himself, is reported in Table~\ref{tab: netatmo sensor specs}.\\
 In this work, data from Netatmo stations is used as Netatmo offers a large amount of sensors in Germany in urban areas, exemplified by Figure~\ref{fig:netatmo sensor locations hamburg} for the region of Hamburg, and by Figure~\ref{fig:netatmo sensor locations stuttgart} for the region of Stuttgart.
 The developer portal~\footnote{\url{https://dev.netatmo.com/apidocumentation}} offers a way to programmatically access all public sensor measurements via a REST API, however each request has a limit on the spatial extend of the requested area for the current weather data. For historic data, the limit per request per sensor is 1024 data points. The API has a tight rate limit per application. For applications below 100 users, the rate limit is 2000 requests every hour and 200 requests every 10 seconds across all users, and 500 requests every hours and 50 requests every 10 seconds per user~\footnote{\url{https://dev.netatmo.com/guideline\#rate-limits}, \textit{last accessed: 06.08.2023}}. In this work, we use the REST API to collect sensor data from Netatmo sensors.
 
@@ -103,11 +103,11 @@ Weather Underground is a commercial weather service which also provides a crowds
 
 \section{Reference Data Providers}
 
-In order to add additional validation to crowdsourced weather data, reference data from (official) weather stations can be used. These weather stations should be setup according to current World meteorologicalOrganization (WMO) guidelines~\cite{wmo2018guide} in order to ensure high data quality. These standards are either achived by offical weather services, or by institutions such as universities whose sensors are maintained by experts.
+In order to add additional validation to crowdsourced weather data, reference data from (official) weather stations can be used. These weather stations should be setup according to current World meteorologicalOrganization (WMO) guidelines~\cite{wmo2018guide} in order to ensure high data quality. These standards are either achived by official weather services, or by institutions such as universities whose sensors are maintained by experts.
 
 \subsection{DWD}
 
-The official german weather service (DWD) has many objectives, that are defined by the DWD-law in Germany. Its tasks include meteorologicaland climatological monitoring of the atmosphere, meterologically securing the airspace for civil aviation, monitoring the maritim climate, and more. The DWD operates a large monitoring network and publishes most of it's data via its OpenData portal~\footnote{\url{https://opendata.dwd.de/}, last accessed 13.07.2023}.\\
+The official german weather service (DWD) has many objectives, that are defined by the DWD-law in Germany. Its tasks include meteorologicaland climatological monitoring of the atmosphere, meteorologically securing the airspace for civil aviation, monitoring the maritim climate, and more. The DWD operates a large monitoring network and publishes most of it's data via its OpenData portal~\footnote{\url{https://opendata.dwd.de/}, last accessed 13.07.2023}.\\
 The main advantages of the DWD data are high data quality through reference instruments and proper setup according to WMO guidelines~\cite{wmo2018guide}. The main disadvantage is the low spatial coverage of the data, as stations are sparsely distributed to measure the overall mesoscale climate, as seen in Figure~\ref{fig:dwd sensor locations germany}. Additionally, a lot of the public weather stations are located close to airports, which are usually located outside of cities, and therefore not suitable for measuring urban microclimates.
 
 \begin{figure}[ht]
@@ -137,7 +137,7 @@ Due to the limited scope of this work, this data is currently not used.
 
 \subsection{Locally Operated Weather Stations}
 
-Next to offical weather services, many public and private institutions operate weather stations. The following section lists two examples of such institutions, the meteorologicalInstitute of the University of Hamburg and the Office for Environmental Protection of the City of Stuttgart.
+Next to official weather services, many public and private institutions operate weather stations. The following section lists two examples of such institutions, the meteorologicalInstitute of the University of Hamburg and the Office for Environmental Protection of the City of Stuttgart.
 
 \subsubsection{University of Hamburg – meteorologicalInstitute}
 
@@ -165,8 +165,8 @@ The Office for Environmental Protection of the city of Stuttgart has the goal of
 \subsubsection{Remote Sensing}
 \label{subsec: remote sensing}
 
-In comparison to stationary sensors that are installed directly in the environment they are observing, remote sensing describes the process of observing a target environment from afar~\cite{campbell2011introduction}. In climatology, remote sensing is used to collect meteological data via satellites, planes or ballons by either capturing image data, that can be used to identify things like cloud and land coverage, by measuring passive radiation, or by actively sending out microwaves or using LIDAR to detect features such as surface temperature, e.g. LST data. Remote sensing comes with its own set of advantages and challenges.\\
-The major upside of sensors moving way above ground is the high spatial coverage, that allows for meso- and planetary-scale anaylsis of weather phenomena. Another upside is the great data availibility, as many satellite providers, such as ESA..., publish their satellite data. This creates many research opportunities, and many services directly rely on these measurements (todo list).\\ % gridded data
+In comparison to stationary sensors that are installed directly in the environment they are observing, remote sensing describes the process of observing a target environment from afar~\cite{campbell2011introduction}. In climatology, remote sensing is used to collect meteorological data via satellites, planes or ballons by either capturing image data, that can be used to identify things like cloud and land coverage, by measuring passive radiation, or by actively sending out microwaves or using LIDAR to detect features such as surface temperature, e.g. LST data. Remote sensing comes with its own set of advantages and challenges.\\
+The major upside of sensors moving way above ground is the high spatial coverage, that allows for meso- and planetary-scale anaylsis of weather phenomena. Another upside is the great data availability, as many satellite providers, such as ESA..., publish their satellite data. This creates many research opportunities, and many services directly rely on these measurements (todo list).\\ % gridded data
 % remote sensing challenges
 Remote sensing also comes with some downsides. The primary downside is the low spatio-temporal resolutions. Weather satellites usually are not orbit-stationary and move around earth on a predetermined orbit. As a consequence, satellites only pass over each individual area a couple times a day, making real-time applications for currently unobserved areas impossible. Additinally, the spatial resolution can be too low for micro-/local-scale analysis, with typical LST resolution spanning from 1 km$^{2}$ to tens or even hundreds of km$^{2}$ per data point/grid field. In the atmosphere, there is also a lot of environmental noise, like radiation, that can have a negative influence on the measurement accuracy. Another disturbing factor can be clouds or other types of particles like rain, that absorb radiation/microwaves sent from the sensors, traditionally making measuring under cloudy/rainy conditions either impossible (example) or less accurate (example), by instead relying on outgoing radiation from the surface. These restrictions highly depend on the sensor used, as different sensors use different 
 sensors use different technologies, e.g. microwaves with different wave lengths or higher resolution sensors.
