--- a/chapter8.tex
+++ b/chapter8.tex
@@ -136,7 +136,7 @@ Further improvements
 baseline: mean, IWD, ordinary kriging (with different kernels)
 
 \subsection{Geostatistical Interpolation Baseline}
-In order to evaluate the performance of the ML model, we need to first get a better understanding of the interpolation quality of existing interpolation techniques. Next to simpler deterministic interpolation methods, such as inverse weight distance (IWD) or k-nearest neighbours (KNN) that are easy and performant, but struggle to capture more complex interdependencies, there are also more complex methods available. The most common geostatistical method for interpolation is Krigin, which is based on a gaussian process and 
+In order to evaluate the performance of the ML model, we need to first get a better understanding of the interpolation quality of existing interpolation techniques. Next to simpler deterministic interpolation methods, such as inverse weight distance (IWD) or k-nearest neighbours (KNN) that are easy and performant, but struggle to capture more complex interdependencies, there are also more complex methods available. The most common geostatistical method for interpolation is Kriging, which is based on a gaussian process and 
 
 In the scope of this work, we unfortunately cannot compare all of these methods with each other and therefore need to focus on a subset of methods. EBK and EBKRP are one of the most commonly used methods for temperature interpolation (cite). According to \cite{njoku2023effects}, EBKRP continously outperforms EBK in different weather station density scenarios, therefore we will use EBKRP as a baseline for our comparison.\\
 In the following, the machine learning fundamentals for this work are explained and the different ML regression model types are introduced.
@@ -215,7 +215,7 @@ Steps:
   - "naive" approach with nearest neighbor -> show high error rate
 - probabilistic approaches
   - reference approach with geostatistical methods (ordinary kriging, empirical bayesian kriging, EBK with regression) -> still high error rate, especially with lower density of weather stations/bad support for irregularly spaced data
-    - ordinary krigin:
+    - ordinary kriging:
         - temperature semivariogram first
         - add additional features (e.g. soil temperature, land coverage, sky view factor, ...) as semivariograms and use cokrigin to combine them
     - empirical bayesian kriging:
@@ -223,7 +223,7 @@ Steps:
 
   - semivariogram: https://pro.arcgis.com/en/pro-app/latest/help/analysis/geostatistical-analyst/understanding-a-semivariogram-the-range-sill-and-nugget.htm
 
-- deep learning approach with neural networks -> itteratively improve model by adding additional features, compare with reference approach
+- deep learning approach with neural networks -> iteratively improve model by adding additional features, compare with reference approach
 
 % Overall steps
 
